[tool.poetry]
name = "stylegan2-ada-pytorch"
version = "0.1.0"
description = ""
authors = ["NVlabs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.1"
torchvision = "0.14.1"
torchaudio = "0.13.1"
click = "^8.1.7"
requests = "^2.31.0"
tqdm = "^4.66.1"
ninja = "^1.11.1.1"
imageio-ffmpeg = "0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
